# workingtest

./: .coverage  .gitignore  ARCHITECTURE.md  README.md  TEST_CASE_GENERATION.md  config.py  database.py  flask_app.py  models.py  pages.md  pyproject.toml  requirements.txt  reset_database.py  run_coverage.py  starters.db  update_info.md
.github/: .copilot-instructions.md.swp  copilot-instructions.md
app/: __init__.py  decorators.py  models.py
app/blueprints/: users.py
app/blueprints/exercises/: __init__.py  routes.py
app/blueprints/main/: __init__.py  routes.py
app/blueprints/starters/: __init__.py  routes.py
app/static/: custom.css
app/templates/: base.html  base.html.jinja  generic_table.html.jinja  macros.html  macros.html.jinja  table_macros.html
blueprints/helper/: __init__.py  routes.py
blueprints/main/: routes.py
blueprints/organizer/: __init__.py  routes.py
instance/: database.db
static/: style.css
templates/: .index_boot.html.swp  about.html  base.html  helpers.html  index.html  index_boot.html  new_working_test.html  starter.html  starter_details.html  style.css  tasks.html
tests/: conftest.py  test_login.py  test_user_management.py
tests/main/: test_index.py
tests/selenium/: __init__.robot  test_debug_results.robot  test_index_page.robot  test_unauthenticated_results.robot  test_user_login.robot  test_wt_details_delete.robot
tests/users/: __init__.py  test_login.py  test_user_management.py  test_user_routes.py
tests/wts/: test_create_wt.py
workingtest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+47 files in other folders)
